채널 3 추가.
