# server/api/services/balance/balance.service.js
@@ -62,7 +62,7 @@ class BalanceService {
     peers.push('peer1.org2.example.com');
 
     l.debug(`invoke peers:${peers}`);
-    return Promise.resolve(transaction.invokeChainCode(null, 'mychannel2', 'balance',
+    return Promise.resolve(transaction.invokeChainCode(null, req.query.Channel, 'balance',
       'saveUser', args, 'admin', 'org1'));
   }
 }
